# ZPG_ALTERNATIVE

./: CMakeLists.txt  QUESTIONS_FOR_TEACHER.md
src/: AbstractModel.cpp  AbstractModel.h  AbstractScene.cpp  AbstractScene.h  Application.cpp  Application.h  ArcadeScene.cpp  ArcadeScene.h  BenchModel.cpp  BenchModel.h  BezierCurve.cpp  BezierCurve.h  BezierSpline.cpp  BezierSpline.h  BushModel.cpp  BushModel.h  Callback.cpp  Callback.h  Camera.cpp  Camera.h  DirectionalLight.cpp  DirectionalLight.h  DrawableObject.cpp  DrawableObject.h  FileReader.cpp  FileReader.h  Firefly.cpp  Firefly.h  FragmentShader.cpp  FragmentShader.h  GiftModel.cpp  GiftModel.h  Hammer.cpp  Hammer.h  LeafBezierMovement.cpp  LeafBezierMovement.h  LeafCustomW.cpp  LeafCustomW.h  LeafMatrix.cpp  LeafMatrix.h  (+94 more)
src/Shaders/: FragmentShaderBlinnPhong.glsl  FragmentShaderBlinnPhongMaterial.glsl  FragmentShaderConstant.glsl  FragmentShaderLambert.glsl  FragmentShaderPhong.glsl  FragmentShaderPhongCorrect.glsl  FragmentShaderPhongNormalMap.glsl  FragmentShaderPhongTexture.glsl  FragmentShaderPhongWrong.glsl  FragmentShaderSkybox.glsl  VertexShaderBlinnPhong.glsl  VertexShaderConstant.glsl  VertexShaderLambert.glsl  VertexShaderPhongNormalMap.glsl  VertexShaderPhongWTest.glsl  VertexShaderSkybox.glsl  simple_forest_fragment.glsl  simple_forest_vertex.glsl
src/models/: bench.h  plain_texture.h
